[package]
name = "secret-holdem"
version = "0.0.1"
authors = ["Assaf Morami <assaf.morami@gmail.com>"]
edition = "2018"
description = "A Texas hold 'em poker game implemented as a Secret Contract for the Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v0.8.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v0.8.0" }
schemars = "0.7"
serde-json-wasm = "0.2.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
sha2 = "0.9.1"
rand_chacha = "0.2.2"
rand = "0.7.3"
# bincode = "1.3.1"
rs_poker = { git = "https://github.com/enigmampc/rs-poker", rev = "0fbdf0548dc0e7934c453d49b4ff86f15c89c7de" }
